--- a/sass/layout/_main.scss
+++ b/sass/layout/_main.scss
@@ -1,3 +1,3 @@
 .main {
-  padding: $spacing-huge;
+  padding: $spacing-large;
 }
